# tradingview-mcp

./: .gitignore  PROJECT_BRIEF.md  README.md  TV_DESKTOP_MCP_BUILD_SPEC (1).md  experiment_config.json  pyproject.toml  recon_findings.json  server.py
docs/: AUDIT_AND_FIX_PLAN.md  DOCUMENTATION_SYSTEM.md  EXPERIMENT_LOG.md  STATUS.md  known_issues.json  monaco-editor-integration.md
logs/: experiment_log.jsonl  gtvp_edge_sweep_20260707_052234.json  gtvp_edge_sweep_20260707_142248.json  nq_orb_baseline.json  scoped_smoke.jsonl  wt_dynamic_cross_ground_results.json  wt_dynamic_filter_validation.json  wt_dynamic_filter_window_validation.json  wt_max_sweep_results.json  wt_risk_management_validation.json
scripts/: apply_gtvp_strategy_source.py  click_update_on_chart.py  compare_mszz_modes.py  dom_probe.py  explore.py  final_inspect.py  generate_status.py  gtvp_edge_sweep.py  inspect_pine_buttons.py  inspect_strategy.py  launch_tv_desktop.sh  plan_generation.py  probe_dom.py  probe_tester.py  react_fiber_probe.py  restore_mszz_strategy_source.py  run_mszz_mode.py  strategy_audit.py  sweep_gtvp.py  sweep_gtvp_settings.py  sweep_mszz_confluence.py  sweep_mszz_long_edge.py  sweep_mszz_long_filters.py  sweep_scalp_aggressive.py  sweep_scalp_direct.py  sweep_wavetrend_dynamic_cross_ground.py  sweep_wavetrend_full.py  sweep_wavetrend_max.py  validate_wavetrend_dynamic_filter.py  validate_wavetrend_dynamic_filter_windows.py  validate_wavetrend_risk_management.py  verify_fixes.py
tests/: test_alert_controller.py  test_backends.py  test_backtest_controller.py  (+11 more)
(+97 files in other folders)
